tests/vendor/valid/trivial/not_sum.c
//expect 1
//tags: trivial, unary, logical
int main() {
    return !(4-4);
}