tests/vendor/invalid/syntax/unary_missing_semicolon.c
//tags: trivial, unary, logical
int main() {
    return !10
}